# staticimagesrc

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  configure~
m4/: .keep
plugins/: Makefile.am  gststaticimagesrc.cpp  gststaticimagesrc.h  gststaticpngsrc.cpp  gststaticpngsrc.h  plugin.cpp
plugins/.deps/: gststaticpngsrc.Plo  plugin.Plo
